# mruby-clang-plugin

./: .travis.yml  CMakeLists.txt  README.md  mrbgem.rake  mruby_clang_checker.cxx
src/: mruby_clang_checker.cxx
test/: test.c  test.cxx
